--- a/index.html
+++ b/index.html
@@ -20,59 +20,7 @@
         <input type="text" id="search" class="search" placeholder="search" />
       </form>
     </header>
-    <main id="main">
-      <div class="movie">
-        <img
-          src="https://images.unsplash.com/photo-1485846234645-a62644f84728?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bW92aWV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-          alt=""
-        />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>overview</h3>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic
-          repellendus quidem quis iusto at cumque, incidunt id, quas, voluptatem
-          possimus ipsa corrupti repellat harum dignissimos vitae omnis
-          asperiores nihil maiores.
-        </div>
-      </div>
-      <div class="movie">
-        <img
-          src="https://images.unsplash.com/photo-1485846234645-a62644f84728?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bW92aWV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-          alt=""
-        />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>overview</h3>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic
-          repellendus quidem quis iusto at cumque, incidunt id, quas, voluptatem
-          possimus ipsa corrupti repellat harum dignissimos vitae omnis
-          asperiores nihil maiores.
-        </div>
-      </div>
-      <div class="movie">
-        <img
-          src="https://images.unsplash.com/photo-1485846234645-a62644f84728?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bW92aWV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-          alt=""
-        />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>overview</h3>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic
-          repellendus quidem quis iusto at cumque, incidunt id, quas, voluptatem
-          possimus ipsa corrupti repellat harum dignissimos vitae omnis
-          asperiores nihil maiores.
-        </div>
-      </div>
-    </main>
+    <main id="main"></main>
   </body>
   <script src="index.js"></script>
 </html>
